# mend

./: Dockerfile  README.md  docker-compose.yml  meson.build
.github/workflows/: ci.yml
doc/: mend.1.in  menddb.3.in  meson.build
include/: mend.h
lib/: _mend.h  alias.c  entity.c  mend.c  mend.h  meson.build  note.c  relation.c
sql/: tables.sql
src/: main.c  meson.build  options.h  parse.c  utils.c  utils.h
src/command/: command.h  create_alias.c  create_annotation.c  create_entity.c  edit_note.c  edit_relation.c  list_aliases.c  list_entities.c  list_notes.c  list_related.c  list_relations.c  new_alias.c  new_entity.c  new_note.c  new_relation.c  parse.c  remove_alias.c  remove_annotation.c  remove_entity.c  remove_note.c  remove_relation.c  summarize.c  update_annotation.c
test/: alias.c  entity.c  mend.c  meson.build  note.c  relation.c  tables.sql  test.sh
