sources += [
  files('main.c'),
  files('utils.c'),
  files('parse.c'),
  files('command/list_entities.c'),
  files('command/new_entity.c'),
  files('command/remove_entity.c'),
  files('command/new_alias.c'),
  files('command/list_aliases.c'),
  files('command/remove_alias.c'),
  files('command/new_note.c'),
  files('command/list_notes.c'),
  files('command/edit_note.c'),
  files('command/remove_note.c'),
  files('command/new_relation.c'),
  files('command/list_related.c'),
  files('command/edit_relation.c'),
  files('command/remove_relation.c')
]
